# Ai_Real_Estate_Agent

./: .gitignore  README.md  dockerfile  pyproject.toml
src/Ai_Real_Estate_Agent/: main.py  main1.py
src/Ai_Real_Estate_Agent/utils/: agent.py  osm.py  predictor.py
