[project]
name = "ai-real-estate-agent"
version = "0.1.0"
description = "AI Real Estate Agent with geospatial + ML pricing"
requires-python = ">=3.10"

dependencies = [
    "pandas==2.2.2",
    "numpy==2.0.2",
    "scikit-learn==1.6.1",
    "xgboost==3.2.0",
    "joblib==1.4.2",
    "langchain==0.3.27",
    "langgraph==0.6.10",
    "langchain-core==0.3.72",
    "langchain-groq==0.3.3",
    "pyproj==3.7.1",
    "python-dotenv==1.0.1",
    "streamlit==1.42.0",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
]